- New custom command option to remove file extension [https://github.com/clechasseur/pathcopycopy/issues/76]
- Improved tooltips in Settings application
- Can now copy paths of .url (internet shortcut) and .website (pinned website) files [https://github.com/clechasseur/pathcopycopy/issues/77]
- New Expert Mode for editing custom commands [https://github.com/clechasseur/pathcopycopy/issues/5]


Version 16.0.1 (2018-11-30)
---------------------------
- Default command will now add separator at end of directory paths when needed [https://github.com/clechasseur/pathcopycopy/issues/52]


Version 16.0 (2018-11-24)
-------------------------
- Add "Copy WSL Path" command [https://github.com/clechasseur/pathcopycopy/issues/47]
- Add "Copy Samba Path" command [https://github.com/clechasseur/pathcopycopy/issues/46]
- Quotes can now be added only if there are spaces in the path [https://github.com/clechasseur/pathcopycopy/issues/38]
- Can now use fully-qualified domain names (FQDN) when copying UNC paths [https://github.com/clechasseur/pathcopycopy/issues/30]
- New option to append a separator (e.g. \ or /) at the end of directory paths [https://github.com/clechasseur/pathcopycopy/issues/49]


Version 15.1 (2018-10-28)
-------------------------
- Allow removing separators in Settings app [https://github.com/clechasseur/pathcopycopy/issues/24]
- Do not copy path unless Ctrl key is down when corresponding option is used [https://github.com/clechasseur/pathcopycopy/issues/32]
- Report version in Windows' Programs and Features [https://github.com/clechasseur/pathcopycopy/issues/28]
- Report errors when exporting settings [https://github.com/clechasseur/pathcopycopy/issues/43]


Version 15.0 (2017-12-21)
-------------------------
- Ignored software updates really won't show up again after one week [https://github.com/clechasseur/pathcopycopy/issues/20]
- Escape '+' character when using the Internet path command [https://github.com/clechasseur/pathcopycopy/issues/11]