@@ -408,4 +408,13 @@ Control-click to avoid displaying an icon for this command.</value>
   <data name="PipelineElement_RemoveExt_HelpText" xml:space="preserve">
     <value>Remove any extension from the file at the end of the path</value>
   </data>
+  <data name="WikiLink_CustomCommands" xml:space="preserve">
+    <value>https://github.com/clechasseur/pathcopycopy/wiki/Custom-Commands</value>
+  </data>
+  <data name="WikiLink_CustomCommandsExpertMode" xml:space="preserve">
+    <value>https://github.com/clechasseur/pathcopycopy/wiki/Custom-Commands-:-Expert-Mode</value>
+  </data>
+  <data name="WikiLink_Settings" xml:space="preserve">
+    <value>https://github.com/clechasseur/pathcopycopy/wiki/Settings</value>
+  </data>
 </root>
