@@ -21,6 +21,7 @@
 
 using System;
 using System.Collections.Generic;
+using System.ComponentModel;
 using System.Diagnostics;
 using System.IO;
 using System.Windows.Forms;
@@ -413,6 +414,20 @@ namespace PathCopyCopy.Settings.UI.Forms
         {
             OKBtn.Enabled = BasePluginLst.SelectedIndex >= 0 &&
                 !(((Plugin) BasePluginLst.SelectedItem) is SeparatorPlugin);
+        }
+
+        /// <summary>
+        /// Called when the user presses the Help button in the form's caption bar.
+        /// We navigate to the wiki to show help in such a case.
+        /// </summary>
+        /// <param name="sender">Event sender.</param>
+        /// <param name="e">Event arguments.</param>
+        private void PipelinePluginForm_HelpButtonClicked(object sender, CancelEventArgs e)
+        {
+            // Open wiki link to Custom Commands page, then cancel the event to avoid
+            // displaying a help mouse pointer like the default behavior.
+            Process.Start(Resources.WikiLink_CustomCommands);
+            e.Cancel = true;
         }
     }
 }
